--- a/src/client/components/HowItWorks/HowItWorks.scss
+++ b/src/client/components/HowItWorks/HowItWorks.scss
@@ -4,6 +4,7 @@
   flex-direction: row;
   padding-inline: $inline-padding;
   padding-bottom: $inline-padding;
+  scroll-margin-top: $header-height + 1vw;
 
   &__content {
     z-index: 1;
