--- a/src/client/components/About/About.scss
+++ b/src/client/components/About/About.scss
@@ -6,6 +6,7 @@
   padding: 6.25vw $inline-padding;
   padding-bottom: 7.5vw;
   gap: $inline-padding;
+  min-height: 100vh;
   scroll-margin-top: 0.5vw;
 
   &__title {
