added Dashboard page

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,16 @@
   scroll-behavior: smooth;
 }
 
+a {
+  all: unset;
+  display: flex;
+  margin: auto 0;
+  height: max-content;
+  width: max-content;
+  cursor: pointer;
+
+}
+
 body {
   background-color: $bg-color;
 }
