--- a/src/client/components/FAQ/FAQ.scss
+++ b/src/client/components/FAQ/FAQ.scss
@@ -78,6 +78,7 @@
       width: 1.5vw;
       transform: rotate(0deg);
       transition: transform 0.4s ease;
+      user-select: none;
 
       &.active {
         transform: rotate(180deg);
