--- a/src/client/components/Main/Main.scss
+++ b/src/client/components/Main/Main.scss
@@ -80,6 +80,7 @@
     &__arrow {
       height: 0.78vw;
       position: relative;
+      user-select: none;
       transition: transform 0.5s ease-out;
     }
 
