--- a/src/client/pages/SignUp/SignUp.scss
+++ b/src/client/pages/SignUp/SignUp.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  background-color: $bg-login-color;
+  background-color: $soft-white;
 
   &__img {
     width: 50vw;
@@ -20,7 +20,7 @@
   &__logo {
     display: inline-block;
     margin: 0 auto;
-    cursor: pointer;
+    user-select: none;
 
     &-img {
       width: 6.7vw;
@@ -54,7 +54,7 @@
     align-items: center;
     justify-content: center;
     gap: 0.94vw;
-    border-radius: 1.25vw;
+    border-radius: $border-radius;
     border: 0.15vw solid map-get($black-translucents, 10);
     background: $bg-color-translucent;
     padding: 0.94vw 0;
@@ -113,7 +113,7 @@
       align-items: center;
       justify-content: center;
       padding: 1.25vw;
-      border-radius: 1.25vw;
+      border-radius: $border-radius;
       border: 0.15vw solid map-get($black-translucents, 10);
       gap: 0.94vw;
       margin-top: 0.63vw;
@@ -161,7 +161,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 1.25vw;
+      border-radius: $border-radius;
       background: $dark-blue;
       padding: 0.94vw 0;
       font-family: $main-text-font;
