--- a/src/client/components/Navigation/Navigation.scss
+++ b/src/client/components/Navigation/Navigation.scss
@@ -36,6 +36,7 @@ $colors: (
       border-radius: $border-radius;
       text-decoration: none;
       transition: 0.2s;
+      width: 77%;
 
       & .dashboard__navigation__icon {
         opacity: 0.6;
