--- a/src/client/components/Navigation/Navigation.scss
+++ b/src/client/components/Navigation/Navigation.scss
@@ -9,6 +9,8 @@ $colors: (
 
 .dashboard__navigation {
   display: flex;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
   position: fixed;
   flex-direction: column;
   gap: 2.5vw;
@@ -16,7 +18,6 @@ $colors: (
   background-color: $soft-white;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
-  width: 15%;
   height: 100vh;
 
   &__list {
@@ -34,9 +35,7 @@ $colors: (
       gap: 0.94vw;
       padding: 0.75vw 1.25vw;
       border-radius: $border-radius;
-      text-decoration: none;
       transition: 0.2s;
-      width: 77%;
 
       & .dashboard__navigation__icon {
         opacity: 0.6;
