--- a/src/client/components/utils/variables.scss
+++ b/src/client/components/utils/variables.scss
@@ -1,6 +1,4 @@
 $inline-padding: 8.75vw;
-$desktop-max-width: 120vw;
-$desktop-width: 90vw;
 
 $header-height: 4.0625vw;
 
@@ -17,6 +15,8 @@ $dark-blue-translucents: ();
   $dark-blue-translucents: map-merge($dark-blue-translucents, ($key: $value-blue)) !global;
 }
 
+$width-navigation: 15%;
+$width-calendar: 25%;
 
 $bright-yellow: #e7f461;
 $bright-blue: #9F9ADF;
@@ -39,6 +39,7 @@ $gap: 1.5vw;
 $box-shadow: 0px 0px 1.25vw map-get($black-translucents, 10);
 
 $main-text-size: 0.9vw;
+
 
 $main-text-font: "Montserrat", sans-serif;
 
