--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import 'https://fonts.googleapis.com/css2?family=Condiment&family=League+Gothic&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap';
 
+html {
+  scrollbar-gutter: stable;
+}
+
 * {
   margin: 0;
   padding: 0;
