--- a/src/client/components/UserProfile/UserProfile.scss
+++ b/src/client/components/UserProfile/UserProfile.scss
@@ -1,4 +1,4 @@
-.calendar {
+.user-profile {
   display: flex;
   grid-column: 3 / 4;
   grid-row: 1 / 3;
@@ -6,10 +6,11 @@
 
   flex-direction: column;
   background-color: $soft-white;
-  border-radius: $border-radius;
+  border-radius: $border-radius $border-radius 0 0;
   padding: 1.25vw;
   box-shadow: $box-shadow;
-  height: 100vh;
+  min-height: fit-content;
+  height: calc(100vh - $gap);
 
   &__profile {
     display: flex;
@@ -26,6 +27,7 @@
     &__icon {
       height: 1.35vw;
       opacity: 0.6;
+      user-select: none;
 
       &:hover {
         opacity: 1;
