added Workout page

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,14 @@ a {
   display: flex;
   margin: auto 0;
   cursor: pointer;
+}
 
+button {
+  cursor: pointer;
+}
+
+.link {
+  text-decoration: none;
 }
 
 body {
