added Stats components

--- a/src/client/pages/Dashboard/MyPlan/MyPlan.scss
+++ b/src/client/pages/Dashboard/MyPlan/MyPlan.scss
@@ -83,7 +83,7 @@
       }
 
       &--active {
-        background-color: $soft-yellow-translucents !important;
+        background-color: $bright-yellow !important;
         color: black;
 
         &:hover {
