--- a/src/client/components/UserProfile/MyCalendar/MyCalendar.scss
+++ b/src/client/components/UserProfile/MyCalendar/MyCalendar.scss
@@ -68,7 +68,7 @@
     }
 
     &--active {
-      background-color: $soft-yellow-translucents !important;
+      background-color: $bright-yellow !important;
       color: black;
 
       &:hover {
