--- a/src/client/pages/SignUp/SignUp.scss
+++ b/src/client/pages/SignUp/SignUp.scss
@@ -144,7 +144,7 @@
       }
     }
 
-    &__forgot {
+    &__forgot, &__error {
       all: unset;
       font-family: $main-text-font;
       font-size: $main-text-size;
@@ -155,6 +155,14 @@
 
       &:hover {
         color: map-get($black-translucents, 70);
+      }
+    }
+
+    &__error {
+      color: $bright-red;
+
+      &:hover {
+        color: $bright-red;
       }
     }
 
