added training logic

--- a/src/client/components/DashBoardHeader/DashBoardHeader.scss
+++ b/src/client/components/DashBoardHeader/DashBoardHeader.scss
@@ -27,6 +27,15 @@
     &:hover {
       background-color: $soft-yellow-translucents;
     }
+
+    &--completed {
+      background-color: $soft-green;
+      cursor: default;
+
+      &:hover {
+        background-color: $soft-green;
+      }
+    }
   }
 
   &__emoji {
