--- a/src/client/components/UserProfile/MyCalendar/MyCalendar.scss
+++ b/src/client/components/UserProfile/MyCalendar/MyCalendar.scss
@@ -168,7 +168,7 @@ abbr[title] {
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: 0.62vw;
 
     &__box {
@@ -203,6 +203,9 @@ abbr[title] {
       }
       &--purple {
         background-color: $bright-purple;
+      }
+      &--pink {
+        background-color: $soft-pink;
       }
     }
   }
