--- a/src/client/utils/variables.scss
+++ b/src/client/utils/variables.scss
@@ -32,7 +32,7 @@ $soft-red-translucents: #e5b3a57f;
 $soft-blue: #BCC2D4;
 $soft-orange: #F0DBA0;
 $soft-purple: #D3BDE3;
-$soft-pink:#FEB5EC;
+$soft-pink:#E5A5CD;
 
 $bg-color: #eaeaea;
 $bg-color-translucent: #eaeaea87;
